- For all drivers that have a <driver>.sgml file, add code in their build     system to build the README file at make dist time - in util/macros/xorg-macros.m4, add a new XORG_CHECK_LINUXDOC macro that     will check if the required tools and files exist, and if so set a     conditional. - util/modular/symlink.sh - Link all the <driver>.sgml to xf86-video-<driver>/README.sgml - Add all the README.<driver> to the list of excluded files - xc/programs/Xserver/hw/xfree86/doc/sgml/SiS.sgml: Various changes to make     it spew less warnings when the text file is built.

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,4 +21,9 @@
 AUTOMAKE_OPTIONS = foreign
 SUBDIRS = src man
 
-EXTRA_DIST = CALLMAP TODO_NOTES
+if BUILD_LINUXDOC
+README: README.sgml
+	$(MAKE_TEXT) README.sgml && mv README.txt README
+endif
+
+EXTRA_DIST = CALLMAP TODO_NOTES README.sgml
