--- a/Makefile.am
+++ b/Makefile.am
@@ -28,9 +28,12 @@ endif
 
 EXTRA_DIST = CALLMAP TODO_NOTES README.sgml
 
-.PHONY: ChangeLog
+.PHONY: ChangeLog INSTALL
+
+INSTALL:
+	$(INSTALL_CMD)
 
 ChangeLog:
 	$(CHANGELOG_CMD)
 
-dist-hook: ChangeLog
+dist-hook: ChangeLog INSTALL
