config: rename TODO_NOTES and remove from EXTRA_DIST
Automake always distribute the TODO file.

Signed-off-by: Gaetan Nadon <memsize@videotron.ca>

--- a/Makefile.am
+++ b/Makefile.am
@@ -26,7 +26,7 @@ README: README.sgml
 	$(MAKE_TEXT) README.sgml && mv README.txt README
 endif
 
-EXTRA_DIST = CALLMAP TODO_NOTES README.sgml
+EXTRA_DIST = CALLMAP README.sgml
 
 .PHONY: ChangeLog INSTALL
 
