README: keep the text version of README, discard the sgml version
The linuxdoc doc tool is deprecated.
README files are exclusively text files.

Signed-off-by: Gaetan Nadon <memsize@videotron.ca>

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,12 +21,7 @@
 SUBDIRS = src man
 MAINTAINERCLEANFILES = ChangeLog INSTALL
 
-if BUILD_LINUXDOC
-README: README.sgml
-	$(MAKE_TEXT) README.sgml && mv README.txt README
-endif
-
-EXTRA_DIST = CALLMAP README.sgml
+EXTRA_DIST = CALLMAP
 
 .PHONY: ChangeLog INSTALL
 
