--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -23,11 +23,11 @@
 
 drivermandir = $(DRIVER_MAN_DIR)
 
-driverman_PRE = @DRIVER_NAME@.man
+driverman_PRE = s3virge.man
 
 driverman_DATA = $(driverman_PRE:man=@DRIVER_MAN_SUFFIX@)
 
-EXTRA_DIST = @DRIVER_NAME@.man
+EXTRA_DIST = s3virge.man
 
 CLEANFILES = $(driverman_DATA)
 
